--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -12,7 +12,6 @@
         &:hover{
            color: $color-white;
            padding-right: 30px;
-        //    padding-left: 33px;
            letter-spacing: 0.5px;
         }
     }
@@ -20,6 +19,25 @@
         transition: all 0.5s ease;
         &:hover{
            color: $color-white;
+           padding-right: 30px;
+           padding-left: 30px;
+           letter-spacing: 0.5px;
+        }
+    }
+    &-hire{
+        background-color: transparent;
+        color: $primary;
+        transition: all 0.5s ease;
+        &:hover{
+             padding-bottom: 25px;
+             letter-spacing: 0.5px;
+        }
+    }
+    &-send{
+        background-color: $color-secondary;
+         color: $color-white;
+        transition: all 0.5s ease;
+        &:hover{
            padding-right: 30px;
            padding-left: 30px;
            letter-spacing: 0.5px;
