--- a/src/styles/components/_index.scss
+++ b/src/styles/components/_index.scss
@@ -1,6 +1,8 @@
 @import './Sidebar';
 @import './Herosection';
+@import './Aboutsection';
 @import './button';
 @import './Resumesection';
 @import './box';
 @import './Servicesection';
+@import './Hiresection';
