--- a/src/styles/components/_Servicesection.scss
+++ b/src/styles/components/_Servicesection.scss
@@ -2,32 +2,39 @@
     width: 100%;
     display: flex;
     flex-direction: column;
+    height: 100vh;
     &-details{
         margin-left: 100px;
         display: flex;
         gap: 35px;
         .service{
             width: 350px;
-            border: 2px solid blue;
+            // border: 2px solid blue;
             display: flex;
             flex-direction: column;
             padding: 56px 40px;
             gap: 20px;
             position: relative;
+            border-radius: 10px;
+            box-shadow: 4px 4px 60px 8px #f7f7f7;
               &-animation{
                 position: absolute;
                 top: 0;
                 left: 0;
                 height: 100%;
-                width: 100%;
+                width: 0%;
+                z-index: 0;
+                background-color: $primary;
+                border-radius: 10px;
                 // border: 2px solid red;
+                transition: all 0.3s ease-in-out;
               }
                 &-logo{
                     position: relative;
                  height: 60px;
                     width: 60px;
                    background-color: $color-logobg;
-                   border: 2px solid red;
+                //    border: 2px solid red;
                    border-radius: 30px;
                    display: flex;
                    justify-content: center;
@@ -45,17 +52,26 @@
                     display: flex;
                     flex-direction: column;
                     gap: 10px;
+                    padding: 0;
                     li{
                         list-style: none;
+                        svg{
+                            margin-right: 20px;
+                        }
                     }
                 }
             }
+            &:hover .service-animation{
+                width: 100%;
+            }
             }
         }
+        .cardimg{
+            position: absolute;
+            bottom: 0;
+            right: 0;
+            z-index: -1;
+            width: 90px;
+        }
     }
-@keyframes animate{
-    from{
-    }
-    to{
-    }
-}
+    
