Contact section added

--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,7 @@
     font-family: "Poppins", sans-serif;
 }
 .maincontainer{
+    width: 100%;
     display: flex;
     &-sidebar{
         width: 13.7%;
