--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,10 @@ section[role=individual-component] {
   padding: 100px 0;
 }
 
+section[role=individual-componentsecond] {
+  padding: 100px 0 0 0;
+}
+
 .headers {
   text-align: center;
   margin-bottom: 50px;
@@ -66,7 +70,7 @@ section[role=individual-component] {
   top: 0;
   left: 0;
   bottom: 0;
-  width: 13.7%;
+  width: 210px;
 }
 .sidebarwrapper-logo {
   width: 100%;
@@ -126,7 +130,6 @@ section[role=individual-component] {
 }
 
 .Herosectionwrapper {
-  height: 100%;
   position: relative;
   height: 100vh;
   background-image: url(../../assets/header-bg.jpg);
@@ -582,11 +585,115 @@ section[role=individual-component] {
   border: 2px solid pink;
 }
 
+.contactwrapper {
+  background-color: #edbc11;
+  padding-bottom: 0;
+}
+.contactwrapper-header h1 {
+  color: #f8e399;
+}
+.contactwrapper-details {
+  display: flex;
+}
+.contactwrapper-details-form {
+  display: flex;
+  flex-direction: column;
+  width: 52%;
+  gap: 15px;
+  margin-left: 85px;
+}
+.contactwrapper-details-form input {
+  padding: 20px;
+  border: none;
+  border-bottom: 2px solid #3B3758;
+  background-color: transparent;
+  outline: none;
+}
+.contactwrapper-details-form textarea {
+  padding: 20px;
+  height: 140px;
+  border: none;
+  border-bottom: 2px solid #3B3758;
+  background-color: transparent;
+  outline: none;
+  resize: none;
+}
+.contactwrapper-details-form .buttonholder {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.contactwrapper-details-form .buttonholder .button {
+  margin-top: 30px;
+}
+.contactwrapper-details-map {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin: 30px 85px 0 40px;
+}
+.contactwrapper-details-map svg {
+  margin-right: 10px;
+  width: 24px;
+  height: 100%;
+  color: #000000;
+}
+
+.footer {
+  display: flex;
+  padding: 80px 60px;
+  align-items: center;
+  gap: 8%;
+  background-color: #edbc11;
+}
+.footer span {
+  font-size: 18px;
+  font-weight: 500;
+  color: #474167;
+}
+.footer-details {
+  display: flex;
+}
+.footer-details ul {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  margin-right: 40px;
+  color: #474167;
+}
+.footer-details ul li {
+  font-size: 18px;
+  font-weight: 500;
+  list-style: none;
+}
+.footer-socialmedia {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+.footer-socialmedia span {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0px 5px 24px 0px rgba(66, 64, 64, 0.12);
+  font-size: 16px;
+  transition: all 0.5s ease;
+}
+.footer-socialmedia span:hover {
+  background-color: #46435E;
+  color: #ffffff;
+}
+
 * {
   font-family: "Poppins", sans-serif;
 }
 
 .maincontainer {
+  width: 100%;
   display: flex;
 }
 .maincontainer-sidebar {
