--- a/src/styles/abstract/_normalize.scss
+++ b/src/styles/abstract/_normalize.scss
@@ -70,6 +70,9 @@ p[role="large"]{
 section[role="individual-component"]{
     padding: 100px 0;
 }
+section[role="individual-componentsecond"]{
+    padding: 100px 0 0 0;
+}
 
 .headers{
      text-align: center;
