--- a/src/styles/components/_index.scss
+++ b/src/styles/components/_index.scss
@@ -6,4 +6,5 @@
 @import './box';
 @import './Servicesection';
 @import './Hiresection';
-@import './Contactsection'
+@import './Contactsection';
+@import './Faqsection';
