--- a/src/styles/components/_Hiresection.scss
+++ b/src/styles/components/_Hiresection.scss
@@ -1,16 +1,17 @@
 .hiresection{
         width: 100%;
         background: url(../../assets/hire-bg.jpg);
-        background-size: cover;
-        height: 300px;
+        background-size:cover;
+        background-repeat: no-repeat;
+        background-position: center;
+        height: 350px;
         text-align: center;
-        border: 2px solid red;
+        // border: 2px solid red;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        background-attachment: scroll;
-        background-size: cover;
+        background-attachment: fixed;
         &-detail{
             h1{
                 color: $color-white;
@@ -18,13 +19,31 @@
            &-content{
             width: 100%;
             display: flex;
+            margin-top: 50px;
+            // border: 2px solid blue;
+            height: 80%;
+            // gap: 100px;
+            align-items: center;
             .play{
-                width: 50%;
-                border: 2px solid pink;
+                width: 35%;
+                // border: 2px solid pink;
+                display: flex;
+                justify-content: end;
+                    align-items: center;
+                      height: 70%;
+                svg{
+                    color: $primary;
+                    font-size: 60px;
+                }
             }
             .hirebtn{
+                height: 70%;
+                margin-left: 100px;
                 width: 50%;
-                border: 2px solid pink;
+                // border: 2px solid pink;
+                display: flex;
+                justify-content:start;
+                align-items: center;
             }
            }
         }
