--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -28,9 +28,17 @@
         background-color: transparent;
         color: $primary;
         transition: all 0.5s ease;
+        border: 2px solid $primary;
+        padding: 0.5rem 1.8rem;
+        height: 60px;
+        // line-height: 1.2;
+        // display: inline-block;
+        // justify-content: center;
+        // align-items: center;
         &:hover{
-             padding-bottom: 25px;
-             letter-spacing: 0.5px;
+            padding: 0.5rem 1.8rem 0.7rem 1.8rem;
+             letter-spacing: 0.8px;
+             
         }
     }
     &-send{
