new section and many more changes

--- a/src/styles/abstract/_normalize.scss
+++ b/src/styles/abstract/_normalize.scss
@@ -63,15 +63,16 @@ p[role="small"]{
 }
 p[role="medium"]{
     font-size: $text-medium;
+    color: $color-head;
 }
 p[role="large"]{
     font-size: $text-large;
 }
 section[role="individual-component"]{
-    padding: 100px 0;
+    padding: 50px 0;
 }
 section[role="individual-componentsecond"]{
-    padding: 100px 0 0 0;
+    padding: 50px 0 0 0;
 }
 
 .headers{
