--- a/src/styles/abstract/_variables.scss
+++ b/src/styles/abstract/_variables.scss
@@ -7,6 +7,7 @@ $small-head: 22px;
 $text-large: 20px;
 $text-medium:18px;
 $text-regular:16px;
+$text-p-small:15px;
 $text-small:14px;
 
 //font weight
