--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,11 @@
 @charset "UTF-8";
+* {
+  font-family: "Poppins", sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 h1 {
   font-size: 40px;
   font-weight: 700;
@@ -40,6 +47,7 @@ p[role=small] {
 
 p[role=medium] {
   font-size: 18px;
+  color: #d9dae7;
 }
 
 p[role=large] {
@@ -47,11 +55,11 @@ p[role=large] {
 }
 
 section[role=individual-component] {
-  padding: 100px 0;
+  padding: 50px 0;
 }
 
 section[role=individual-componentsecond] {
-  padding: 100px 0 0 0;
+  padding: 50px 0 0 0;
 }
 
 .headers {
@@ -66,167 +74,177 @@ section[role=individual-componentsecond] {
   font-weight: 400;
 }
 
-.sidebarwrapper {
-  position: fixed;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  width: 210px;
-}
 .sidebarwrapper-logo {
-  width: 100%;
-  height: 13rem;
   position: relative;
 }
 .sidebarwrapper-logo img {
   width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-  height: 100%;
 }
-.sidebarwrapper-button {
-  background-color: #f9ca21;
-  border: none;
-  padding: 12px 0;
-  width: 100%;
-  text-align: center;
-  color: #151931;
-  font-size: 16px;
+.sidebarwrapper-logo button {
   position: absolute;
-  left: 0;
   bottom: 0;
-}
-.sidebarwrapper-content {
-  background-color: #151931;
-  height: 100%;
-}
-.sidebarwrapper-content-menu {
+  left: 0;
   width: 100%;
-  background-color: #151931;
-  display: flex;
-  flex-direction: column;
-  gap: 1.2rem;
-  padding-top: 2rem;
+  background-color: #f9ca21;
+  height: 45px;
+  border: none;
 }
-.sidebarwrapper-content-menu li {
-  display: flex;
-  color: #E2E1F1;
+.sidebarwrapper-content ul {
+  margin-top: 20px;
+}
+.sidebarwrapper-content ul li {
   list-style: none;
-  align-items: center;
-  padding-left: 0.5rem;
-  gap: 0.8rem;
+  color: #E2E1F1;
+  padding: 10px;
   cursor: pointer;
 }
-.sidebarwrapper-content-menu li:hover {
-  color: #f9ca21;
+.sidebarwrapper-content ul li svg {
+  margin-right: 10px;
+  font-size: 18px;
 }
-.sidebarwrapper-content-menu li svg {
-  font-size: 1.1rem;
-}
-.sidebarwrapper p {
-  line-height: 2.8;
-  margin-bottom: 1.5rem;
+.sidebarwrapper-content p {
   text-align: center;
   color: #B4B3C2;
+  font-weight: 400;
+  line-height: 1.2;
+}
+
+.sidebarwrapper-content-menu li:hover {
+  color: #f9ca21; /* icon and text will both turn white */
 }
 
 .Herosectionwrapper {
-  position: relative;
   height: 100vh;
-  background-image: url(../../assets/header-bg.jpg);
+  background: url(../../assets/header-bg.jpg);
   background-size: cover;
+  background-repeat: no-repeat;
 }
 .Herosectionwrapper-coloroverlay {
   background-color: rgba(21, 25, 49, 0.5);
-  height: 100vh;
-  padding: 100px;
-  padding-top: 0;
+  height: 100%;
+  position: relative;
 }
-.Herosectionwrapper-mail {
+.Herosectionwrapper-coloroverlay-mail {
+  text-align: center;
+  width: 90px;
+  height: 65px;
   position: absolute;
   top: 0;
   right: 0;
-  padding: 15px 30px;
   background-color: #f9ca21;
-  font-size: 1.5rem;
+}
+.Herosectionwrapper-coloroverlay-mail svg {
+  width: 25px;
+  height: 100%;
   color: #151931;
 }
-.Herosectionwrapper-mail svg {
-  margin: 0.5rem 0rem;
-}
-.Herosectionwrapper-contact {
+.Herosectionwrapper-coloroverlay-contact {
   display: flex;
-  padding-top: 1.2rem;
-  gap: 15%;
+  gap: 14%;
+  align-items: center;
+  padding: 33px 33px;
 }
-.Herosectionwrapper-contact p {
+.Herosectionwrapper-coloroverlay-contact p {
   color: #d9dae7;
+  margin: 0;
   font-weight: 500;
 }
-.Herosectionwrapper-info {
-  width: 85%;
+.Herosectionwrapper-coloroverlay-info {
   position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 40%;
   top: 50%;
   transform: translateY(-50%);
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  margin-left: 14%;
 }
-.Herosectionwrapper-info-details {
+.Herosectionwrapper-coloroverlay-info-details {
   display: flex;
   flex-direction: column;
-  width: 55%;
-  gap: 1rem;
-  padding-left: 3.5rem;
+  gap: 10px;
 }
-.Herosectionwrapper-info-details h1 {
+.Herosectionwrapper-coloroverlay-info-details h1 {
   color: #ffffff;
 }
-.Herosectionwrapper-info-details h1 span {
+.Herosectionwrapper-coloroverlay-info-details h1 span {
   color: #f9ca21;
 }
-.Herosectionwrapper-info-details p[role=large] {
+.Herosectionwrapper-coloroverlay-info-details p {
   color: #ffffff;
-  letter-spacing: 0.1rem;
-  font-weight: 500;
 }
-.Herosectionwrapper-info-details p[role=medium] {
+.Herosectionwrapper-coloroverlay-info-details .discription {
   color: #d9dae7;
 }
-.Herosectionwrapper-info-socialmedia {
+.Herosectionwrapper-coloroverlay-socialmedia {
+  position: absolute;
+  right: 7%;
+  top: 40%;
+}
+.Herosectionwrapper-coloroverlay-socialmedia span {
+  border: 1px solid #6a6d8d;
   display: flex;
   flex-direction: column;
-  width: 16px;
+  width: 40px;
+  height: 40px;
+  margin-bottom: 15px;
   align-items: center;
-  gap: 15px;
-}
-.Herosectionwrapper-info-socialmedia span {
-  border: 1px solid #6a6d8d;
-  padding: 6px 10px;
-  font-size: 16px;
-  color: #6a6d8d;
-  cursor: pointer;
-  transition: all 0.1s ease;
+  justify-content: center;
   border-radius: 5px;
+  transition: all 0.1s ease;
 }
-.Herosectionwrapper-info-socialmedia span:Hover {
+.Herosectionwrapper-coloroverlay-socialmedia span:hover {
   border: 1px solid #f9ca21;
   border-radius: 50%;
+}
+.Herosectionwrapper-coloroverlay-socialmedia span:hover svg {
   color: #f9ca21;
 }
-.Herosectionwrapper-info-socialmedia span svg {
-  font-size: 1rem;
+.Herosectionwrapper-coloroverlay-socialmedia span svg {
+  font-size: 25px;
+  color: #6a6d8d;
+  padding: 5px;
 }
 
+@media only screen and (max-width: 992px) and (min-width: 769px) {
+  .Herosectionwrapper-coloroverlay-mail {
+    display: none;
+  }
+  .Herosectionwrapper-coloroverlay-contact {
+    justify-content: center;
+  }
+  .Herosectionwrapper-coloroverlay-info {
+    width: 50%;
+    margin-left: 12%;
+    top: 55%;
+  }
+  .Herosectionwrapper-coloroverlay-info-details .discription {
+    font-size: 15px;
+  }
+}
 .Aboutsectionwrapper {
-  margin: 0 85px;
+  width: 100%;
 }
 .Aboutsectionwrapper-details {
   display: flex;
-  gap: 40px;
+  padding: 0 7.5px 0 20px;
+  gap: 15px;
+  width: 100%;
 }
 .Aboutsectionwrapper-details-left {
+  width: 40%;
   margin-bottom: 50px;
+  padding: 0 10px;
+  margin-left: 46px;
+}
+.Aboutsectionwrapper-details-left img {
+  width: 100%;
+}
+.Aboutsectionwrapper-details-right {
+  margin-top: 10px;
+  margin-right: 46px;
+  width: 55%;
+  padding: 0 10px;
 }
 .Aboutsectionwrapper-details-right h1 {
   color: #d9dae7;
@@ -244,7 +262,7 @@ section[role=individual-componentsecond] {
 }
 .Aboutsectionwrapper-contact {
   display: flex;
-  gap: 100px;
+  gap: 20%;
 }
 .Aboutsectionwrapper-contact ul {
   padding: 0;
@@ -260,17 +278,18 @@ section[role=individual-componentsecond] {
   color: #f9ca21;
 }
 .Aboutsectionwrapper-work {
+  justify-content: center;
   display: flex;
+  gap: 6%;
 }
 .Aboutsectionwrapper-work .fun-fact {
-  width: 300px;
+  width: 220px;
   display: flex;
-  gap: 15px;
-  padding: 25px;
 }
 .Aboutsectionwrapper-work .fun-fact span svg {
   font-size: 32px;
   color: #f9ca21;
+  margin-right: 10px;
 }
 .Aboutsectionwrapper-work .fun-fact-disc p {
   font-size: 22px;
@@ -282,6 +301,35 @@ section[role=individual-componentsecond] {
   font-size: 16px;
 }
 
+@media only screen and (max-width: 992px) and (min-width: 769px) {
+  .Aboutsectionwrapper-details {
+    gap: 0px;
+  }
+  .Aboutsectionwrapper-details-left {
+    margin-left: 26px;
+    width: 45%;
+    display: flex;
+    align-items: center;
+  }
+  .Aboutsectionwrapper-details-right {
+    padding-right: 0;
+    margin-right: 26px;
+  }
+  .Aboutsectionwrapper-contact {
+    gap: 5%;
+  }
+  .Aboutsectionwrapper-work {
+    flex-wrap: wrap;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    gap: 20%;
+  }
+  .Aboutsectionwrapper-work .fun-fact {
+    margin-bottom: 2%;
+    margin-top: 5%;
+  }
+}
 .button {
   font-size: 400;
   background-color: #f9ca21;
@@ -462,6 +510,28 @@ section[role=individual-componentsecond] {
   color: #f9ca21;
 }
 
+@media only screen and (max-width: 992px) and (min-width: 769px) {
+  .Resumesectionwrapper {
+    padding: 0;
+  }
+  .Resumesectionwrapper-progress-left {
+    margin-left: 50px;
+  }
+  .Resumesectionwrapper-progress-right {
+    margin-right: 50px;
+  }
+  .Resumeborder {
+    left: 1rem;
+    margin-left: 50px;
+  }
+  .Resumeborder-boxes {
+    padding-left: 50px;
+  }
+  .Resumeborder-boxes .box {
+    width: 325px;
+    height: 200px;
+  }
+}
 .box {
   width: 390px;
   height: 180px;
@@ -559,6 +629,21 @@ section[role=individual-componentsecond] {
   width: 90px;
 }
 
+@media only screen and (max-width: 992px) and (min-width: 769px) {
+  .servicewrapper {
+    height: -moz-fit-content;
+    height: fit-content;
+    justify-content: center;
+    align-items: center;
+  }
+  .servicewrapper-details {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    width: -moz-fit-content;
+    width: fit-content;
+  }
+}
 .hiresection {
   width: 100%;
   background: url(../../assets/hire-bg.jpg);
@@ -744,18 +829,148 @@ section[role=individual-componentsecond] {
   margin: auto 20px;
 }
 
-* {
-  font-family: "Poppins", sans-serif;
+.headerwrapper {
+  width: 100%;
+  height: 150px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 15px;
+}
+.headerwrapper h2 {
+  font-size: 40px;
+  color: #d9dae7;
+}
+.headerwrapper h3 {
+  font-size: 30px;
+  color: #151931;
+}
+
+.worksectionwrapper {
+  width: 100%;
+  height: -moz-fit-content;
+  height: fit-content;
+  background-color: #f7f7f7;
+}
+.worksectionwrapper-head {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 60px 210px 60px 90px;
+}
+.worksectionwrapper-head-details h2 {
+  font-size: 40px;
+  color: #d9dae7;
+}
+.worksectionwrapper-head-details h3 {
+  font-weight: 400;
+}
+.worksectionwrapper-head-btns {
+  margin-top: 5px;
+  width: 50%;
+  float: right;
+  padding: 10px;
+  display: flex;
+}
+.worksectionwrapper-head-btns button {
+  border: none;
+  background-color: transparent;
+  font-size: 18px;
+  color: #47416f;
+  font-weight: 500;
+  border-bottom: 3px solid #f0ecff;
+  padding: 10px 20px;
+}
+.worksectionwrapper-head-btns .active {
+  border-bottom: 3px solid #f9ca21;
+}
+.worksectionwrapper .gridwrapper {
+  padding: 0 100px;
+  display: grid;
+  grid-gap: 35px;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-auto-rows: minmax(200px, auto);
+  grid-auto-flow: dense;
+}
+.worksectionwrapper .gridwrapper > div {
+  overflow: hidden;
+  position: relative;
+}
+.worksectionwrapper .gridwrapper > div img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  display: block;
+}
+.worksectionwrapper .gridwrapper .tall {
+  grid-row: span 1;
+}
+.worksectionwrapper .gridwrapper .wide {
+  grid-column: span 2;
+}
+.worksectionwrapper .gridwrapper .big {
+  grid-row: span 1;
+  grid-column: span 1;
+}
+.worksectionwrapper .grid-item {
+  position: relative;
+  cursor: pointer;
+}
+.worksectionwrapper .grid-item:hover img {
+  scale: 1.06;
+  transition: all 0.4s ease-in-out;
+}
+.worksectionwrapper .grid-item:hover .imgwrapper {
+  opacity: 1;
+  transition: all 0.4s ease-in-out;
+}
+.worksectionwrapper .imgwrapper {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.678);
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  opacity: 0;
+}
+.worksectionwrapper .imgwrapper p, .worksectionwrapper .imgwrapper h4 {
+  color: #f9ca21;
 }
 
 .maincontainer {
-  width: 100%;
   display: flex;
 }
 .maincontainer-sidebar {
-  width: 13.7%;
+  width: 210px;
+  height: 100%;
+  min-height: 100vh;
+  background-color: #151931;
+  position: fixed;
+  bottom: 0;
+  top: 0;
+  left: 0;
 }
 .maincontainer-main {
-  width: 86.3%;
-  height: 100vh;
+  flex: 1;
+  margin-left: 210px;
+}
+
+@media only screen and (max-width: 992px) {
+  .maincontainer {
+    width: 100vw;
+  }
+  .maincontainer-sidebar {
+    display: none;
+  }
+  .maincontainer-main {
+    width: 100%;
+    margin: 0;
+  }
 }/*# sourceMappingURL=App.css.map */
