--- a/src/App.scss
+++ b/src/App.scss
@@ -1,16 +1,40 @@
-@import './styles/abstract/_index.scss';
-@import './styles/components/_index.scss';
 *{
     font-family: "Poppins", sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
+@import './styles/abstract/_index.scss';
+@import './styles/components/_index.scss';
 .maincontainer{
-    width: 100%;
     display: flex;
     &-sidebar{
-        width: 13.7%;
+        width: 210px;
+        height: 100%;
+        min-height: 100vh;
+          background-color: $color-secondary;
+          position: fixed;
+          bottom: 0;
+          top: 0;
+          left: 0;
+
     }
     &-main{
-        width: 86.3%;
-        height: 100vh;
+        flex: 1;
+        margin-left: 210px;
     }
+}
+@media only screen and (max-width:992px){
+   .maincontainer{
+    width: 100vw;
+    // border: 2px solid blue;
+    &-sidebar{
+        display: none;
+    }
+    &-main{
+        width:100%;
+        margin:0;
+    }
+   }
+
 }
