--- a/src/styles/components/_Herosection.scss
+++ b/src/styles/components/_Herosection.scss
@@ -1,88 +1,119 @@
-.Herosectionwrapper{
+.Herosectionwrapper {
+  height: 100vh;
+  background: url(../../assets/header-bg.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  // border: 2px solid red;
+  &-coloroverlay {
+    background-color: rgba($color-secondary, 0.5);
+    height: 100%;
     position: relative;
-    height: 100vh;
-    background-image: url(../../assets/header-bg.jpg);
-    background-size: cover;
-    &-coloroverlay{
-        background-color: rgba($color-secondary,0.5);
-        height: 100vh;
-        padding: 100px;
-        padding-top: 0;
-    }
-    &-mail{
-        position: absolute;
-        top: 0;
-        right: 0;
-        padding: 15px 30px;
-        background-color: $primary;
-        font-size: 1.5rem;
+    // border: 2px solid red;
+    &-mail {
+      text-align: center;
+      // border: 2px solid green;
+      width: 90px;
+      height: 65px;
+      position: absolute;
+      top: 0;
+      right: 0;
+      background-color: $primary;
+      svg {
+        // padding: 60px;
+        width: 25px;
+        height: 100%;
         color: $color-secondary;
-        svg{
-            margin: 0.5rem 0rem;
-        }
+      }
     }
-    &-contact{
+    &-contact {
         display: flex;
-        padding-top: 1.2rem;
-        gap: 15%;
+        gap: 14%;
+        align-items: center;
+        padding: 33px 33px;
         p{
-            color: $color-head;
+            color:$color-head ;
+            margin: 0;
             font-weight: $font-medium;
         }
     }
     &-info{
-        width: 85%;
         position: absolute;
+        // border: 2px solid red;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 40%;
         top: 50%;
         transform: translateY(-50%);
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-       &-details{
-        display: flex;
-        flex-direction: column;
-        width: 55%;
-        gap: 1rem;
-        padding-left: 3.5rem;
-         h1{
-            color: $color-white;
-            span{
-                color: $primary;
+        margin-left: 14%;
+        &-details{
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+            h1{
+                color: $color-white;
+                span{
+                    color: $primary;
+                }
+            }
+            p{
+                color:$color-white;
+            }
+            .discription{
+                color: $color-head;
             }
         }
-        p[role="large"]{
-            color: $color-white;
-            letter-spacing: 0.1rem;
-            font-weight: $font-medium;
-        }
-        p[role="medium"]{
-            color: $color-head;
-
-        }
-       }
-       &-socialmedia{
-        display: flex;
-        flex-direction: column;
-        width: 16px;
-        align-items: center;
-        gap: 15px;
+    }
+    &-socialmedia{
+        position: absolute;
+        right: 7%;
+        top: 40%;
         span{
             border: 1px solid $color-border;
-            padding: 6px 10px;
-            font-size: $text-regular;
-            color: $color-border;
-            cursor: pointer;
-            transition: all 0.1s ease;
+            display: flex;
+            flex-direction: column;
+            width: 40px;
+            height: 40px;
+            margin-bottom: 15px;
+            align-items: center;
+            justify-content: center;
             border-radius: 5px;
-            &:Hover{
+            transition: all 0.1s ease;
+            &:hover{
                 border: 1px solid $primary;
                 border-radius: 50%;
-                color: $primary;
+                svg{
+                    color: $primary;
+                }
             }
             svg{
-                font-size: 1rem;
+                font-size: 25px;
+                color: $color-border;
+                padding: 5px;
             }
         }
-       }
-      }
+    }
+  }
+}
+@media only screen and (max-width:992px) and (min-width:769px){
+    .Herosectionwrapper{
+        &-coloroverlay{
+            &-mail{
+                display: none;
+            }
+            &-contact{
+                justify-content: center;
+            }
+            &-info{
+                width: 50%;
+                margin-left: 12%;
+                top: 55%;
+                &-details{
+                    .discription{
+                        font-size: 15px;
+                    }
+                }
+            }
+        }
+    }
 }
