--- a/src/styles/components/_Servicesection.scss
+++ b/src/styles/components/_Servicesection.scss
@@ -74,4 +74,18 @@
             width: 90px;
         }
     }
-    
+    @media only screen and (max-width:992px) and (min-width:769px){
+        .servicewrapper{
+            // border: 2px solid blue;
+            height: fit-content;
+            justify-content: center;
+            align-items: center;
+            &-details{
+                margin: 0;
+                display: flex;
+                flex-direction: column;
+                width: fit-content;
+                // border: 2px solid red;
+            }
+        }
+    }
