--- a/src/styles/components/_Servicesection.scss
+++ b/src/styles/components/_Servicesection.scss
@@ -74,7 +74,7 @@
             width: 90px;
         }
     }
-    @media only screen and (max-width:992px) and (min-width:769px){
+    @media only screen and (max-width:992px){
         .servicewrapper{
             // border: 2px solid blue;
             height: fit-content;
