--- a/src/styles/components/_Aboutsection.scss
+++ b/src/styles/components/_Aboutsection.scss
@@ -87,7 +87,7 @@
         }
     }
 }
-@media only screen and (max-width:992px) and (min-width:769px){
+@media only screen and (max-width:992px) and (min-width:768px){
   .Aboutsectionwrapper{
     &-details{
         gap: 0px;
@@ -113,6 +113,82 @@
             justify-content: center;
             gap: 20%;
             .fun-fact{
+                margin-bottom: 2%;
+                margin-top: 5%;
+            }
+        }
+  }
+}
+@media only screen and (max-width:767px) and       (min-width:480px){
+    .Aboutsectionwrapper{
+    &-details{
+        flex-direction: column;
+        gap: 0px;
+        justify-content: center;
+        align-items: center;
+        &-left{
+            margin-left: 26px;
+            width: 65%;
+            display: flex;
+            align-items: center;
+        }
+        &-right{
+            width: 80%;
+            padding-right: 0;
+            margin-right: 26px;
+        }
+    }
+    &-contact{
+            display: flex;
+            flex-direction: column;
+        }
+        &-work{
+            display: flex;
+            flex-direction: column;
+            justify-content: start;
+            margin-left: 16%;
+            width: 70%;
+            gap: 20%;
+            .fun-fact{
+                width: 0;
+                margin-bottom: 2%;
+                margin-top: 5%;
+            }
+        }
+  }
+}
+@media only screen and (max-width:479px){
+    .Aboutsectionwrapper{
+    &-details{
+        flex-direction: column;
+        gap: 0px;
+        justify-content: center;
+        align-items: center;
+        &-left{
+            margin-left: 26px;
+            width: 80%;
+            display: flex;
+            align-items: center;
+        }
+        &-right{
+            width: 85%;
+            padding-right: 0;
+            margin-right: 26px;
+        }
+    }
+    &-contact{
+            display: flex;
+            flex-direction: column;
+        }
+        &-work{
+            display: flex;
+            flex-direction: column;
+            justify-content: start;
+            margin-left: 16%;
+            width: 70%;
+            gap: 20%;
+            .fun-fact{
+                width: 0;
                 margin-bottom: 2%;
                 margin-top: 5%;
             }
